Fix alignment of about me slide description box

--- a/app/assets/stylesheets/about_me_contents.css.scss
+++ b/app/assets/stylesheets/about_me_contents.css.scss
@@ -137,9 +137,9 @@
   .description_box
   {
     margin-top: 24px;
-    margin-left: 22px;
+    margin-left: 21px;
     margin-right: 84px;
-    width: 266px;
+    width: 267px;
     height: 410px;
     border-radius: 15px;
     overflow:auto;
